Fix Stream toList crash in WidgetsTableUtils
Signed-off-by: saulhdev <saul_henriquez@hotmail.com>